--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Работы учеников</h1>
 
 			<div class="img_left">
-				<p>Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Repellat fugiat ducimus, eveniet, dolorem consectetur qui aspernatur vel maxime, distinctio iste optio? Tenetur ipsa facilis dolores, voluptas blanditiis distinctio nisi non incidunt assumenda minus magni, officia.</p>
+				<p>супер работы спустя небольшое время обучения!!           котики</p>
 			</div>
 			<div class="clear"></div>
 			<div class="img_right">
@@ -46,17 +46,30 @@
 
 		</div>	
 		</section>
+
+
 		<section id="c2">
 			<div class="container">
 			<h1>Работы преподователей</h1>
 			<div class="img_right">
 				<img src="images/JhXjipfzyIM.jpg" alt="">
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dignissimos, iusto corporis, repudiandae, tempore nostrum accusamus veritatis doloremque minus quisquam consectetur quaerat quo distinctio sed autem labore vel. Ut, ex.</p>
+				<p> </p>
+			</div>
+			<div class="clear"></div>
+
+
+		</div>
+		</section>
+
+		<section id="c3">
+			<div class="container">
+			<h1>Как записаться</h1>
+			<div class="img_right">
+				<!-- <img src="" alt=""> -->
+				<p>Можно позвонить или написать в ватсапп по номеру "+7 921 043 44 44". Первое занятие бесплатно.</p>
 			</div>
 			<div class="clear"></div>
 		</div>
-		</section>
-		<section id="c3">
 		</section>
 
 	</content>
